--- a/style/style.css
+++ b/style/style.css
@@ -127,6 +127,19 @@ img {
     }
 }
 
+.row-galery{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 0 20px;
+}
+@media screen and (min-width: 576px) {
+    .row-galery {
+        flex-direction: row;
+        padding: 0;
+    }
+}
+
 .img-small-flex-container {
     display: flex;
     flex-direction: column;
@@ -137,22 +150,6 @@ img {
     .img-small-flex-container {
         flex-direction: row;
         padding: 0;
-    }
-}
-
-.img-small-flex-container img {
-    width: 70%;
-    margin: 0 auto;
-}
-@media screen and (min-width: 540px) {
-    .img-small-flex-container img {
-        width: 50%;
-    }
-}
-@media screen and (min-width: 768px) {
-    .img-small-flex-container img {
-        width: 33%;
-        margin: 0;
     }
 }
 
@@ -293,7 +290,7 @@ h3 {
 }
 
 .flexbox-right {
-    width: 100%;
+    width: 65%;
     display: flex;
     flex-direction: column;
 }
@@ -439,6 +436,17 @@ h3 {
 
 .galery a {
     text-decoration: none;
+}
+
+.galery-container {
+    padding: 5px;
+    width: 70%;
+}
+@media screen and (min-width: 576px) {
+    .galery-container {
+        max-width: 50%;
+        margin: 0;
+    }
 }
 
 .row-contact {
